--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,7 +26,7 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
     - name: Run SUT
-      run:  java -jar artifacts/app-ibank.jar -P:profile=test
+      run:  java -jar artifacts/app-ibank.jar -P:profile=test & sleep 10
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
